[package]
name = "fftw-src"
version = "0.1.0"
authors = ["Srinath Kailasa <srinathkailasagmail.com>"]
edition = "2018"

description = "Source of FFTW"
keywords = ["fftw"]
license = "GPL-2.0-or-later"

build = "build.rs"
links = "fftw3"

[build-dependencies]
anyhow = "1.0.70"
cc = "1.0"
fs_extra = "~1.3.0"
ftp = "3.0"
zip = "0.6"