[package]
name = "kifmm-fftw-src"
description = "FFTW src for fifmm"
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/kifmm"
repository = "https://github.com/bempp/kifmm"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
version = "0.2.0"
edition = "2021"

links="fftw3"

[dependencies]

[build-dependencies]
cc = "1.0.90"
fs_extra = "1.3.0"
ftp = "3.0.1"
zip = "2.0.0"
