[package]
name = "kifmm-fftw-sys"
description = "FFTW sys for kifmm"
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/kifmm"
repository = "https://github.com/bempp/kifmm"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository="https://github.com/bempp/kifmm"

links="fftw3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kifmm-fftw-src = { version = "0.1.0" }
libc = "0.2.153"
num-complex = "0.4.5"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"
