[features]
# Treat warnings as a build error.
strict = []
mpi = ["dep:mpi", "dep:superslice", "dep:memoffset", "dep:mpi-sys", "rlst/mpi"]

[package]
name = "kifmm"
version = "3.0.0"
edition = "2021"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
description = "Kernel-independent fast multipole method"
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/kifmm"
repository = "https://github.com/bempp/kifmm"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "kifmm"
crate-type = ["cdylib", "lib"]

[dependencies]
itertools = "0.13.*"
num = "0.4"
rayon = "1.9"
rand = "0.8.5"
kifmm-fftw-sys = { path = "../fftw-sys" }
green-kernels = { git = "https://github.com/bempp/green-kernels" }
lazy_static = "1.4.0"
num-complex = "0.4.5"
mpi = { version = "0.8.*", optional = true, features = ["complex"]}
mpi-sys = { version="0.2.2", optional=true }
memoffset = {version = "0.9.1", optional = true}
pulp = "0.18.12"
bytemuck = "1.16.0"
superslice = {version = "1.0.0", optional = true}
rand_distr = "0.4.3"
rlst = { git = "https://github.com/linalg-rs/rlst.git", default-features = false }
serde_yaml = "0.9.34"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5.*", features = ["html_reports"]}

[build-dependencies]
cbindgen = "0.26.0"

[[bench]]
name = "laplace"
harness = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [ "--html-in-header", "./src/docs-header.html" ]

[lints.clippy]
wildcard_imports = "forbid"
