[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "kifmm_py"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["maturin[patchelf]==1.5.1", "numpy==1.26.2", "mayavi==4.8.1", "vtk==9.3.0", "pyqt5==5.15.10", "numpy-stl==3.1.1", "jupyter"]

[tool.maturin]
python-source = "python"
module-name = "kifmm_py.kifmm_rust"
