[package]
name = "kifmm-papi-sys"
description = "PAPI sys for kifmm"
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/kifmm"
repository = "https://github.com/bempp/kifmm"
authors = ["Srinath Kailasa <srinathkailasa@gmail.com>"]
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.69.4"
cc = "1.0.90"
